--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,11 +11,17 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://resources/upgrades/ability_upgrade.gd"
 }, {
-"base": &"Area2D",
+"base": &"Node2D",
 "class": &"ArrowAbility",
 "icon": "",
 "language": &"GDScript",
 "path": "res://scenes/ability/arrow_ability/arrow_ability.gd"
+}, {
+"base": &"Area2D",
+"class": &"DisposableHitboxComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/component/disposable_hitbox_component.gd"
 }, {
 "base": &"Node",
 "class": &"HealthComponent",
@@ -40,6 +46,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://resources/meta_upgrades/meta_upgrade.gd"
+}, {
+"base": &"Area2D",
+"class": &"RangedComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/ability/arrow_ability/RangedComponent.gd"
 }, {
 "base": &"Node2D",
 "class": &"SwordAbility",
