--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,16 +20,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/manager/upgrade_manager.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://resources/", "res://resources/upgrades/", "res://resources/meta_upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/main/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/main/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/ability/arrow_ability/arrow_ability.tscn", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.tscn", "res://scenes/ability/explosive_arrow_ability/explosive_arrow_ability.tscn", "res://scenes/component/hurt_box_component.tscn", "res://scenes/component/explosion_component.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/manager/upgrade_manager.tscn")
-current_scene="res://scenes/manager/upgrade_manager.tscn"
+open_scenes=PackedStringArray("res://scenes/ability/arrow_ability/arrow_ability.tscn", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.tscn", "res://scenes/ability/explosive_arrow_ability/explosive_arrow_ability.tscn", "res://scenes/component/hurt_box_component.tscn", "res://scenes/component/explosion_component.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/main/main.tscn")
+current_scene="res://scenes/main/main.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/arrow_ability/arrow_ability.gd", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/ability/dagger_ability/dagger_ability.gd", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.gd", "res://scenes/component/death_component.gd", "res://scenes/component/disposable_hitbox_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/explosion_component.gd", "res://scenes/ability/explosive_arrow_ability/explosive_arrow_ability.gd", "res://scenes/ability/explosive_arrow_ability_controller/explosive_arrow_ability_controller.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/UI/meta_menu.gd", "res://scenes/auto_load/meta_progression.gd", "res://resources/meta_upgrades/meta_upgrade.gd", "res://scenes/UI/meta_upgrade_card.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/arrow_ability/RangedComponent.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/manager/upgrade_manager.gd"
+open_scripts=["res://resources/upgrades/ability.gd", "res://resources/upgrades/ability_upgrade.gd", "res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/arrow_ability/arrow_ability.gd", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/ability/dagger_ability/dagger_ability.gd", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.gd", "res://scenes/component/death_component.gd", "res://scenes/component/disposable_hitbox_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/explosion_component.gd", "res://scenes/ability/explosive_arrow_ability/explosive_arrow_ability.gd", "res://scenes/ability/explosive_arrow_ability_controller/explosive_arrow_ability_controller.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/UI/meta_menu.gd", "res://scenes/auto_load/meta_progression.gd", "res://resources/meta_upgrades/meta_upgrade.gd", "res://scenes/UI/meta_upgrade_card.gd", "res://scenes/main/OutOfBounds.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/arrow_ability/RangedComponent.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/main/OutOfBounds.gd"
 open_help=["@GlobalScope", "Array", "CharacterBody2D", "CollisionShape2D", "Node", "Node2D", "Object", "PhysicsBody2D", "Resource", "Tween"]
 script_split_offset=398
 list_split_offset=0
